fix header overflow

--- a/dash_app/apps/dash-singlecell-vr/assets/styles.css
+++ b/dash_app/apps/dash-singlecell-vr/assets/styles.css
@@ -2,6 +2,7 @@
     background-color: #1F2630;
     padding: 3%;
     min-height: 100vh;
+    max-width: 100vw;
 }
 
 body {
@@ -108,4 +109,9 @@ body {
 
 .Select-value-label {
     color: #7fafdf !important;
+}
+
+#logo {
+    max-width: 100%;
+    max-height: 100%;
 }
